使用代码生成器生成参数列表