@@ -6,8 +6,7 @@ import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 /**
  * 单向加密算法集合.
@@ -40,7 +39,8 @@ public abstract class Coder {
      * @throws Exception 
      */  
     public static byte[] decryptBASE64(String key) throws Exception {  
-        return (new BASE64Decoder()).decodeBuffer(key);  
+       // return (new BASE64Decoder()).decodeBuffer(key);  
+    	return Base64.decodeBase64(key);
     }  
   
     /** 
@@ -51,7 +51,8 @@ public abstract class Coder {
      * @throws Exception 
      */  
     public static String encryptBASE64(byte[] key) throws Exception {  
-        return (new BASE64Encoder()).encodeBuffer(key);  
+       // return (new BASE64Encoder()).encodeBuffer(key);
+    	return Base64.encodeBase64String(key);
     } 
     
     /**
